Closed Bug 956525 Opened 12 years ago Closed 12 years ago

typo in firefox source/media/mtransport/transportlayerdtls.cpp ("Lower lower" should say "Lower layer")

Categories

(Core :: WebRTC: Networking, defect)

x86_64
All
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla33

People

(Reporter: pquiring, Assigned: spacetime, Mentored)

Details

(Whiteboard: [good first bug][patch])

Attachments

(1 file, 1 obsolete file)

User Agent: Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/31.0.1650.63 Safari/537.36 Steps to reproduce: Just a typo: Goto http://mxr.mozilla.org/mozilla-central/source/media/mtransport/transportlayerdtls.cpp#590 In this function "Lower lower" should be "Lower layer". If confused me for a bit but I found the bug on my end anyways. Actual results: "Lower lower" Expected results: "Lower layer"
Status: UNCONFIRMED → NEW
Component: Untriaged → WebRTC: Networking
Ever confirmed: true
OS: Windows 7 → All
Product: Firefox → Core
Whiteboard: [good first bug]
Attached patch 956525.patch (obsolete) — Splinter Review
Simple text substitution.
Assignee: nobody → ra.rishab
Status: NEW → ASSIGNED
Whiteboard: [good first bug] → [good first bug][patch]
Attached patch 956525_.patchSplinter Review
Sorry, that was an incorrectly prepared diff. Followed the recommended procedure for preparing the patch.
Attachment #8362544 - Attachment is obsolete: true
Is there something I need to amend in this patch?
Flags: needinfo?(pquiring)
Comment on attachment 8362557 [details] [diff] [review] 956525_.patch Review of attachment 8362557 [details] [diff] [review]: ----------------------------------------------------------------- Looks good, requesting review.
Attachment #8362557 - Flags: review?(adam)
Attachment #8362557 - Flags: feedback+
Flags: needinfo?(pquiring)
Comment on attachment 8362557 [details] [diff] [review] 956525_.patch Review of attachment 8362557 [details] [diff] [review]: ----------------------------------------------------------------- Looks good to me.
Attachment #8362557 - Flags: review?(adam) → review+
Great, marking as checkin-needed, thanks! Rishab, you might want to ask for the editbugs privilege on IRC so that you can mark as checkin-needed yourself. As discussed before, when you submit a patch you ask for review first from a module owner (and feedback from anyone if you want an informal approval). When you get an r+, you can mark the bug as checkin-needed in the "keywords" box at the top.
Mentor: manishearth
Keywords: checkin-needed
Thanks Adam, Manish! I do have edit privileges on this one (I guess because the bug is assigned to me).
Oh, right, forgot that happens. Been a while :)
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla33
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: