Bug 956525 - Replace 'Lower lower' in log messages with 'Lower layer'. r=abr