media/mtransport/transportlayerdtls.cpp
@@ -606,22 +606,22 @@ void TransportLayerDtls::StateChange(TransportLayer *layer, State state) {
       break;
 
     case TS_CONNECTING:
-      MOZ_MTLOG(ML_ERROR, LAYER_INFO << "Lower lower is connecting.");
+      MOZ_MTLOG(ML_ERROR, LAYER_INFO << "Lower layer is connecting.");
       break;
 
     case TS_OPEN:
       MOZ_MTLOG(ML_ERROR,
-                LAYER_INFO << "Lower lower is now open; starting TLS");
+                LAYER_INFO << "Lower layer is now open; starting TLS");
       Handshake();
       break;
 
     case TS_CLOSED:
-      MOZ_MTLOG(ML_ERROR, LAYER_INFO << "Lower lower is now closed");
+      MOZ_MTLOG(ML_ERROR, LAYER_INFO << "Lower layer is now closed");
       TL_SET_STATE(TS_CLOSED);
       break;
 
     case TS_ERROR:
-      MOZ_MTLOG(ML_ERROR, LAYER_INFO << "Lower lower experienced an error");
+      MOZ_MTLOG(ML_ERROR, LAYER_INFO << "Lower layer experienced an error");
       TL_SET_STATE(TS_ERROR);
       break;
   }
